[project]
name = "psaps"
authors = [{name="Rauf Salamzade", email="salamzader@gmail.com"}]
version = "1.0.0"
description = "Program to perform phylogenetic assessment of pangenome size."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files=["bin/psaps"]

[tool.setuptools.packages.find]
where = ["src"]
